[package]
name = "merino"
version = "0.1.9"
description = "A SOCKS5 Proxy server written in Rust"
repository = "https://github.com/ajmwagar/merino"
readme = "README.md"
license = "MIT"
authors = ["Avery Wagar <ajmw.subs@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 3
lto = true

[[bin]]
name = "merino"
path = "src/main.rs"

# [lib]
#name = "libreq_processor"
# path = "libreq_processor.so"
#link = "libreq_processor"

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.0", features = ["derive"] }
csv = "1.1.6"
dotenv = "0.15.0"
log = "0.4.14"
lru = "0.14.0"
pin-project-lite = "0.2.16"
pretty_env_logger = "0.4.0"
serde = "1.0.133"
serde_derive = "1.0.133"
snafu = "0.7.0"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["full"] }
